Feat: jwt information api (#48)
* Fix: add missing env

* Docs: change show jwt info api

* Refactor: UserRole use sepecific method name

* Feat: add parse jwt api

* Fix: return access token expiration time

* Refactor: seperate jwt business logic

* Fix: rollback jwt expire time

* Fix: remove cicd event